# cursor-schedule

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent_observability_guardrails-Pre-Flight-Review_2026-02-21_1400.md  eslint.config.js  install.sh  package-lock.json  pyproject.toml
.cursor/commands/: add-scheduled-task.md  debug-extension.md  release.md
.cursor/rules/: ci.mdc  cli-patterns.mdc  gnome-extension.mdc  project.mdc  testing.mdc
.cursor/skills/version-bump/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cursor-command/: schedule-task.md
gnome-extension/cursor-schedule@thason.github.io/: datePicker.js  extension.js  indicator.js  logViewer.js  metadata.json  prefs.js  stylesheet.css  taskIO.js  taskPanel.js  taskStore.js
gnome-extension/cursor-schedule@thason.github.io/schemas/: gschemas.compiled  org.gnome.shell.extensions.cursor-schedule.gschema.xml
src/cursor_schedule/: __init__.py  cli.py  cli_extra.py  runner.py  store.py  store_sync.py  systemd.py
tests/: conftest.py  test_cli.py  test_cli_extra.py  test_runner.py  test_store.py  test_store_sync.py  test_systemd.py
